--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -5,33 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <title>PLAY @ SOMMERFEST | SOMMERFEST VORSTRASSE FEAT. SPITTALER STRASSE | VOL XXXVIII</title>
+    <title>PLAY @ SOMMERFEST | SOMMERFEST VORSTRASSE FEAT. SPITTALER STRASSE | VOL XXXIX</title>
     <link href="{{ url_for('static', filename='css/intro.min.css') }}" type="text/css" rel="stylesheet"/>
 
     <script>
         try {
             window.localStorage.clear();
-        } catch(ex) {}
+        } catch (ex) {
+        }
     </script>
 </head>
 <body>
 
 <header>
     <div class="color-bar"></div>
-    <div class="application-bar">Bewerbungsfrist 01.03.2015</div>
+    <div class="application-bar">Bewerbungsfrist 01.01.2016</div>
 </header>
 
 <main class="main">
 
     <h1>tunefish
         <span>Sommerfest Vorstrasse feat. Spittaler Strasse</span>
-        <span class="date">12. + 13. Juni 2015</span>
+        <span class="date">10. + 11. Juni 2016</span>
     </h1>
 
     <section class="intro">
         <h1>be a part of</h1>
+
         <h2 class="headline slide">
-            <span>38 years of</span>
+            <span>39 years of</span>
 			<span class="words-wrapper">
 				<b class="is-visible">sommerfest</b>
                 <b>party</b>
@@ -48,62 +50,152 @@
     </section>
 
     <a class="btn" href="/bands" title="Zur Bandbewerbung">Zur Bandbewerbung</a>
+
     <div class="btn-text">
-        <small>Die Anmeldung ist <u>kostenlos</u> und <br/> mit <u>keinerlei Spam</u> verbunden!</small>
+        <small><a href="#wie">Weitere Informationen zur Bewerbung</a></small>
     </div>
 
     <p>
         <span>Sommerfest - Was ist das?</span>
-        Das Sommerfest in den Wohnheimen Vorstraße und Spittaler Straße ist das größte studentisch organisierte Festival in Bremen und umzu. <br/>
-        Es wird in Eigenverantwortung von den Bewohnern der benachbarten Studentenwohnheime Vorstraße und Spittaler Straße organisiert.
+        Das Sommerfest in den Wohnheimen Vorstraße und Spittaler Straße ist das größte studentisch organisierte Festival
+        in Bremen und umzu. <br/>
+        Es wird in Eigenverantwortung von den Bewohnern der benachbarten Studentenwohnheime Vorstraße und Spittaler
+        Straße organisiert.
         <br/>
         <br/>
-        Alles fing in den Siebzigern an. Im Innenhof des Studentenwohnheims Vorstraße versammelten sich ein paar Studenten, um mit Bier und Trommelmusik zusammen zu feiern. Nun jährt sich dieses Fest zum 38. Mal und es hat sich einiges verändert: Auf zwei Bühnen performen Bands und Live-Acts und um sie herum tummeln sich <strong>2000–3000 Leute pro Abend</strong>!
+        Alles fing in den Siebzigern an. Im Innenhof des Studentenwohnheims Vorstraße versammelten sich ein paar
+        Studenten,
+        um mit Bier und Trommelmusik zusammen zu feiern. Nun jährt sich dieses Fest zum 39. Mal und es hat sich einiges
+        verändert:
+        Auf zwei Bühnen performen Bands und Live-Acts und um sie herum tummeln sich <strong>2000–3000 Leute pro
+        Abend</strong>!
         <br/>
         <br/>
-        Aber eins ist von damals bis heute geblieben: Unser Sommerfest ist vollkommen unkommerziell ausgerichtet, daher treten alle Bands ohne Gage auf. Natürlich übernehmen wir eure Anfahrtskosten und ihr werdet bei uns mit Speis' und Trank versorgt.
+        Aber eins ist von damals bis heute geblieben: Unser Sommerfest ist vollkommen unkommerziell ausgerichtet,
+        daher treten alle Bands ohne Gage auf. Natürlich übernehmen wir eure Anfahrtskosten und ihr werdet bei uns mit
+        Speis' und Trank versorgt.
         <br/>
         Falls eine Übernachtungsmöglichkeit nötig ist, so bekommen wir die innerhalb unseres Wohnheims auch organisiert!
         <br/><br/>
-        Bei Fragen zur Übernachtung, oder anderen Band relevanten Themen schreibt uns einfach an <br/>
-        <a href="mailto:play@vorstrasse-bremen.de"><strong>play@vorstrasse-bremen.de</strong></a>.
-        <br/><br/>
-        oder postalisch an
-        <br/>
-        <strong>Sommerfest Bandbewerbungen<br />
-            c/o Lisa C. Eckhardt<br />
-            Vorstraße 99 - WG E03<br />
-            28359 Bremen
-        </strong>
+        Bei Fragen zu allen bandrelevanten Themen schreibt uns einfach an <br/>
+        <a href="mailto:bands@vorstrasse-bremen.de"><strong>bands@vorstrasse-bremen.de</strong></a>
+    </p>
+
+    <p id="wie">
+        <span>Was ist tunefish?</span>
+        Das Sommerfest Vorstraße feat. Spittaler Straße bekommt jedes Jahr eine Vielzahl an Bewerbungen von Künstlern,
+        wie Bands oder DJs. Um diese Bewerbungen besser verwalten zu können und euch dann auch entsprechendes Feedback
+        zu geben, haben wir vor einigen Jahren unser Portal "tunefish" umgesetzt. Seit dem letzten Jahr ist es möglich,
+        dass ihr euch direkt online bei uns bewerbt und wir somit auf Post- oder E-Mailbewerbungen verzichten können.
+        Wir und Ihr können euch somit ein besseres Feedback geben, ob alles, was wir von euch für die Bewerbung brauchen
+        bereits bei uns angekommen ist.
     </p>
 
     <p>
-        <span>Was ist tunefish? Warum machen wir das?</span>
-        Das könnte man sich natürlich als erstes Fragen. <br/>
-        Fakt ist, dass wir jedes Jahr mehr tolle Bewerbungen von Euch bekommen und wir diese Bewerbungen dann erst einmal
-        aufbereiten müssen. Sei es für unser Voting, für unsere Webseite oder für Facebook. <br/>
-        Das ist immer ein recht großer Aufwand für uns und natürlich auch für Euch, falls ihr eventuell, für uns wichtige,
-        Infos bei Eurer Bewerbung vergessen habt und diese nachreichen müsst. <br/> <br/>
-        Deshalb haben wir dieses Jahr unsere interne Votingplattform "tunefish" für euch umgebaut, sodass ihr euch direkt
-        und bequem von Eurem Rechner oder Smartphone aus bewerben könnt. <br/> <br/>
-        Wir glauben, auch wenn wir Euren tollen postalischen Bewerbungen hinterhertrauern werden, dass dies der Schritt in die
-        richtige Richtung ist und unser "tunefish" auch bei Euch Anklang findet. <br/> <br/>
-        Solltet Ihr bei der Benutzung Probleme oder Fragen haben wendet euch bitte umgehend an
-        <br/>
-        <a href="mailto:tunefish@vorstrasse-bremen.de"><strong>tunefish@vorstrasse-bremen.de</strong></a>.
-        <br/>
-        <br/>
-        Wir helfen euch dann ASAP weiter.
-        <br/><br/>
-        Wir freuen uns schon auf Eure Bewerbungen.
-        <br/>
-        Eure Sommerfest Orga
+        <span>Wir spielen &lt;Musikrichtung einsetzen&gt;. Können wir uns bei euch bewerben?</span>
+        Diese Frage hat uns im letzten Jahr mehrfach erreicht. Grundsätzlich sind wir offen für alle Musikrichtungen.
+        Wir versuchen ein möglichst breites Lineup zu erstellen, dementsprechend sind wir dankbar für Bewerbungen aus
+        allen Musikrichtungen. Auch Bewerbungen von DJs sind uns willkommen.<br/><br/>
+        Unsere einzigen Bedingungen sind, dass ihr nicht schon die letzten zwei Jahre bei uns aufgetreten seid und
+        dass ihr als Band eure eigenen Songs spielt.
     </p>
 
+    <p>
+        <span>Wie funktioniert die Bewerbung?</span>
+        Um euch als Künstler bei uns zu Bewerben ist es zuerst nötig euch als Band zu registrieren. Dafür benötigt ihr
+        neben einem Benutzernamen und einem Passwort auch eine E-Mailadresse.
+        Über diese E-Mailadresse werden wir die weitere Kommunikation mit euch abwickeln.<br/><br/>
+        Es folgen nun fünf Schritte, in denen wir Informationen über euch abfragen.
+    </p>
+    <ul>
+        <li><b>Infos</b> Hier erfassen wir allgemeine Informationen über eure Band.<br/>
+            Diese umfassen euren Bandnamen<sup>1</sup>, die Anzahl eurer Bandmitglieder,
+            eine Telefonnummer, unter der wir euch bei Nachfragen erreichen können, eure Stadt und
+            eine Bandbeschreibung<sup>2</sup>. Optional könnt ihr uns noch eure Webseite, eine ID eines YouTube-Videos
+            sowie eure facebook-Seite mitteilen. Diese nutzen wir im weiteren für die Promotion von euch, wenn ihr
+            auf dem nächsten Sommerfest spielt.<br/>
+            <sup>1</sup>
+            <small>Dieser Bandname wird von uns für die weitere Promotion verwendet.
+                Bitte schaut daher sorgfältig, dass der Bandname eurer üblichen Schreibweise entspricht.
+            </small>
+            <br/>
+            <sup>2</sup>
+            <small>Diese Beschreibung nutzen wir für die Promotion auf unserer Homepage.</small>
+        </li>
+        <li><b>Musik</b> Stellt uns 3 bis 5 Songs von euch als MP3-Dateien zur Verfügung, die das Können und die
+            Vielfältigkeit von Euch zeigen. Diese Songs sind unsere Basis für die Bandauswahl.
+        </li>
+        <li><b>Bild</b> Zur Promotion brauchen wir desweiteren ein Bandfoto von euch. Dieses sollte eine JPG, PNG
+            oder GIF-Datei sein und mindestens 1000px Breite aufweisen.
+        </li>
+        <li><b>Techrider</b> Damit wir euch später entsprechende Technik auf unseren Bühnen bereitstellen können,
+            benötigen wir von euch einen Techrider. Dieser muss im PDF-Format vorliegen.
+        </li>
+        <li><b>Übersicht</b> Habt ihr alle obigen Anforderungen erfüllt, könnt ihr eure Bewerbung abschließen und
+            somit in die Bandauswahl für das nächste Sommerfest kommen.
+        </li>
+    </ul>
+
+
+    <p>
+        <span>Wie geht's weiter?</span>
+        Nach Abschluss der Bewerbungsphase am 01. Januar 2016 startet ein Voting der Organisatoren des Sommerfests.
+        Alle Bands, die zu diesem Zeitpunkt ihre Bewerbung abgeschlossen haben, nehmen an dem Voting teil. Alle anderen
+        Bands bekommen direkt eine Absage, da wir nur vollständige Bewerbungen berücksichtigen können. Im Rahmen des
+        Votings hören wir uns jede Bewerbung an und bewerten sie mit 1 bis 5 Sternen.<br/>
+        <br/>
+        Die Votingphase endet am 31. Januar 2016. Das Ressort "Bands" erstellt dann anhand der Bewertungen ein
+        Wunsch-Lineup und versucht die
+        entsprechenden Bands für das Sommerfest 2016 zu buchen. Solltet ihr zu den Glücklichen gehören, die in einem
+        unserer 13 Slots spielen dürfen, dann hört ihr nun persönlich von uns. Sonst bekommt ihr bis spätestens Anfang
+        März
+        eine Absagemail von uns.<br/><br/>
+        Die 13 Bands, die 2016 bei uns spielen, sehen wir dann am 10. und 11. Juni 2016 bei uns auf dem Sommerfest
+        Vorstraße feat. Spittaler Straße.
+    </p>
+
+    <p>
+        <span>Weitere typische Fragen</span>
+        <b>Wir haben uns 2015 bereits beworben, können uns aber nicht mehr einloggen?</b><br />
+        Neues Jahr, alles neu. Wir haben alle Bewerbungen und Bewerbungsdaten aus 2015 gelöscht und starten somit
+        wieder auf der grünen Wiese. Bitte registriert euch daher neu. Bestimmt haben sich eh einige Details eurer
+        Bewerbung seit dem letzen Jahr geändert: neue Songs, neues Foto etc.
+        <br /><br />
+        <b>Wir haben das Passwort für unseren Login vergessen?</b><br />
+        Bitte kontaktiert uns kurz unter
+        <a href="mailto:tunefish@vorstrasse-bremen.de">tunefish@vorstrasse-bremen.de</a> unter Angabe eures Loginnamens.
+        Es erhöht eure Chancen, wenn die Mail von der bei der Registrierung verwendeten E-Mailadresse kommt ;-)
+        <br /><br />
+        <b>Reicht auch eine facebook-Seite, eine Webseite, ein Soundcloud-Profil oder eine MySpace-Seite?</b><br />
+        Nein. Eure Webseite und eure facebook-Seite könnt ihr uns im Rahmen der Bewerbung gerne mitteilen, um euch im
+        Voting zu berücksichtigen, ist allerdings zwingend eine komplette und abgeschlossene Bandbewerbung notwendig.
+        <br /><br />
+        <b>Wir haben die Bewerbungsfrist versäumt, passen aber total toll auf euer Festival.</b><br />
+        Ihr könnt uns ja mal eine nette Mail schreiben an
+        <a href="mailto:bands@vorstrasse-bremen.de">bands@vorstrasse-bremen.de</a>. Vermutlich müssen wir euch aber
+        auf die Bandbewerbung für das nächste Sommerfest 2017 vertrösten.
+        <br /><br />
+        <b>Wir kommen mit dem tunefish nicht klar.</b><br />
+        Dann schreibt uns mal eine Mail an unseren technischen Support
+        <a href="mailto:tunefish@vorstrasse-bremen.de">tunefish@vorstrasse-bremen.de</a>. Wir versuchen euch dann
+        schnellstmöglich bei eurem Problem zu helfen.
+        <br /><br />
+        <b>Wir sind eine Agentur und würden gerne Bewerbungen für mehrere Bands einreichen. Ist das möglich?</b><br />
+        Pro Login ist genau eine Bewerbung für eine Band möglich. Erstellt bitte für jede Band ein eigenes Profil mit
+        einem anderen Loginnamen, füllt die Bewerbung aus und schickt sie ab. Die E-Mailadresse kann in bei allen euren
+        Accounts identisch sein.
+    </p>
+    <p>
+        <span>Ich habe Fragen? Ich habe Probleme mit tunefish?</span>
+        Bei technischen Problemen und Fragen mit unserem tunefish-Portal stehen wir euch unter
+        <a href="mailto:tunefish@vorstrasse-bremen.de">tunefish@vorstrasse-bremen.de</a> zur Verfügung.<br />
+        Für allgemeine Bandfragen steht euch das Ressort Bands unter
+        <a href="bands@vorstrasse-bremen.de">bands@vorstrasse-bremen.de</a> zur Verfügung.
+    </p>
 </main>
 
 <footer>
-    &copy;2014 - Wohnpark am Fleet e.V.
+    &copy; 2015 - Wohnpark am Fleet e.V.
 </footer>
 
 
