small hint zur bewerbung

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -105,6 +105,9 @@
         Um euch als Künstler bei uns zu Bewerben ist es zuerst nötig euch als Band zu registrieren. Dafür benötigt ihr
         neben einem Benutzernamen und einem Passwort auch eine E-Mailadresse.
         Über diese E-Mailadresse werden wir die weitere Kommunikation mit euch abwickeln.<br/><br/>
+        Ihr könnt die Bewerbung jederzeit unterbrechen und später fortsetzen. Auch könnt ihr einzelne Schritte erstmal
+        überspringen. Beachtet aber bitte, dass eure Bewerbung von euch im letzten Schritt vor dem Bewerbungsschluss
+        (1. Januar 2016) abgeschlossen werden muss.<br /><br />
         Es folgen nun fünf Schritte, in denen wir Informationen über euch abfragen.
     </p>
     <ul>
