Website ist nicht optional

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -113,9 +113,9 @@
     <ul>
         <li><b>Infos</b> Hier erfassen wir allgemeine Informationen über eure Band.<br/>
             Diese umfassen euren Bandnamen<sup>1</sup>, die Anzahl eurer Bandmitglieder,
-            eine Telefonnummer, unter der wir euch bei Nachfragen erreichen können, eure Stadt und
-            eine Bandbeschreibung<sup>2</sup>. Optional könnt ihr uns noch eure Webseite, eine ID eines YouTube-Videos
-            sowie eure facebook-Seite mitteilen. Diese nutzen wir im weiteren für die Promotion von euch, wenn ihr
+            eine Telefonnummer, unter der wir euch bei Nachfragen erreichen können, eure Stadt, eure Webseite und
+            eine Bandbeschreibung<sup>2</sup>. Optional könnt ihr uns noch eine ID eines YouTube-Videos
+            sowie eure facebook-Seite mitteilen. Diese nutzen wir ism weiteren für die Promotion von euch, wenn ihr
             auf dem nächsten Sommerfest spielt.<br/>
             <sup>1</sup>
             <small>Dieser Bandname wird von uns für die weitere Promotion verwendet.
