no comma after grüße

--- a/client/views/bands/main_after_deadline.html
+++ b/client/views/bands/main_after_deadline.html
@@ -27,7 +27,7 @@
                             durchhören und bewerten. Wir melden uns auf jeden Fall bis Mitte Mai 2015.
                         {% endif %}
                          <br/><br/>
-                        Liebe Grüße,<br/>
+                        Liebe Grüße<br/>
                         Deine Sommerfest Orga
                     </p>
 
