--- a/client/views/bands/main_after_submit.html
+++ b/client/views/bands/main_after_submit.html
@@ -20,7 +20,7 @@
                         Deine Bewerbung wurde in unser System übertragen und steht nun für das Voting bereit.<br/><br/>
                         Alles was Du nun tun musst ist warten.<br/>
                         Wir benachrichtigen Dich sobald das Voting abgeschlossen ist. <br/><br/>
-                        Liebe Grüße,<br/>
+                        Liebe Grüße<br/>
                         Deine Sommerfest Orga
                     </p>
 
