--- a/client/views/vote/main_inactive.html
+++ b/client/views/vote/main_inactive.html
@@ -21,7 +21,7 @@
                         dein Tunefish-Account ist noch nicht aktiviert.<br /><br />
                         Wir werden deinen Account schnellstmöglichst aktivieren.
                         <br/><br/>
-                        Liebe Grüße,<br/>
+                        Liebe Grüße<br/>
                         Deine Sommerfest Orga
                     </p>
 
