Add anchor on landingpage at type of music

--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -91,7 +91,7 @@
         bereits bei uns angekommen ist.
     </p>
 
-    <p>
+    <p id="musikrichtung">
         <span>Wir spielen &lt;Musikrichtung einsetzen&gt;. Können wir uns bei euch bewerben?</span>
         Diese Frage hat uns im letzten Jahr mehrfach erreicht. Grundsätzlich sind wir offen für alle Musikrichtungen.
         Wir versuchen ein möglichst breites Lineup zu erstellen, dementsprechend sind wir dankbar für Bewerbungen aus
