Foto statt Bandbild

--- a/client/views/vote/admin/band_list.html
+++ b/client/views/vote/admin/band_list.html
@@ -76,7 +76,7 @@
                         <span class="label {% if band.is_profile_valid %}label-success"><i class="i-done{% else %}label-danger"><i class="i-close{% endif %}"></i> Profil  </span> &nbsp; &nbsp; &nbsp;
                         <span class="label {% if band.is_email_confirmed %}label-success"><i class="i-done{% else %}label-danger"><i class="i-close{% endif %}"></i> Mail  </span> &nbsp; &nbsp; &nbsp;
                         <span class="label {% if band.is_tracks_valid %}label-success"><i class="i-done{% else %}label-danger"><i class="i-close{% endif %}"></i> Tracks  </span> &nbsp; &nbsp; &nbsp;
-                        <span class="label {% if band.image %}label-success"><i class="i-done{% else %}label-danger"><i class="i-close{% endif %}"></i> Bandbild  </span> &nbsp; &nbsp; &nbsp;
+                        <span class="label {% if band.image %}label-success"><i class="i-done{% else %}label-danger"><i class="i-close{% endif %}"></i> Foto  </span> &nbsp; &nbsp; &nbsp;
                         <span class="label {% if band.techrider %}label-success"><i class="i-done{% else %}label-danger"><i class="i-close{% endif %}"></i> Techrider  </span> &nbsp; &nbsp; &nbsp;
                     </td>
                 {% endif %}
