Name again full width

--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-8">
+            <div class="col-xs-12">
                 {{ renderDefault(band_form.name) }}
             </div>
 
