--- a/client/views/vote_layout/layout_vote_admin.html
+++ b/client/views/vote_layout/layout_vote_admin.html
@@ -31,7 +31,7 @@
 </main>
 
 <footer>
-    &copy;2014 - Wohnpark am Fleet e.V.
+    &copy; 2014 - 2015 Wohnpark am Fleet e.V.
 </footer>
 
 <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
