Add link for old voting interface

--- a/client/views/vote/angular.html
+++ b/client/views/vote/angular.html
@@ -32,6 +32,7 @@
                 <li><a href="#/" ng-click="setRating(5,5)">Beste Bands</a></li>
                 <li><a href="#/playlist">Playlist</a></li>
                 <li><a href="#/stats">Statistiken</a></li>
+                <li><a href="/vote/ember">Altes Voting-Interface</a></li>
             </ul>
 {% raw %}
             <div ng-show="isPlaying">
