--- a/client/views/vote/angular.html
+++ b/client/views/vote/angular.html
@@ -40,9 +40,9 @@
                     <a href="#/" ng-click="setRating(0,5)">Alle Bands</a>
                 </li>
                 <li><a href="#/" ng-click="setRating(0,0)">Noch nicht gevotet</a></li>
-                <li><a href="#/" ng-click="setRating(5,5)">Beste Bands</a></li>
+                <li><a href="#/" ng-click="setRating(5,5)">Deine Lieblingsbands</a></li>
                 <li><a href="#/playlist">Playlist</a></li>
-                <li><a href="#/stats">Statistiken</a></li>
+                {# <li><a href="#/stats">Statistiken</a></li> #}
                 <li><a href="/vote/ember#/bands">Altes Voting-Interface</a></li>
             </ul>
 {% raw %}
