--- a/client/views/vote/admin/user_list.html
+++ b/client/views/vote/admin/user_list.html
@@ -22,7 +22,7 @@
     {% for user in users|sort(attribute=userSort, reverse=reverse) %}
         <tr>
             <td>{{ user.login }}</td>
-            <td>{{ user.access_name }}</td>
+            <td>{% if user.is_inactive %}<span class="label label-danger"><i class="i-close"></i> {{ user.access_name }} </span>{% else %}{{ user.access_name }}{% endif %}</td>
             <td class="hidden-print"><a class="access" href="{{ url_for('vote.admin.users.access', user_id=user.id) }}">{% if user.is_inactive %}
                 aktivieren{% else %}deaktivieren{% endif %}</td>
             {% if g.user.is_admin %}
