--- a/client/views/landingpage.html
+++ b/client/views/landingpage.html
@@ -51,7 +51,7 @@
 
     </section>
 
-    <a class="btn" href="/bands" title="Zur Bandbewerbung">Zur Bandbewerbung</a>
+    <a class="btn" href="/bands" title="Zur Bandbewerbung">Bandbewerbungsphase beendet!</a>
 
     <div class="btn-text">
         <small><a href="#wie">Weitere Informationen zur Bewerbung</a></small>
