Return to band list by click on logo

--- a/client/views/vote/angular.html
+++ b/client/views/vote/angular.html
@@ -13,7 +13,7 @@
     <div class="row">
 
         <div class="col-sm-3 col-xs-0">
-            <img src="/app/15tunefish/tunefish.svg" id="tunefishLogo" alt="tunefish" />
+            <a href="#/"><img src="/app/15tunefish/tunefish.svg" id="tunefishLogo" alt="tunefish" /></a>
             {% raw %}
             <div ng-show="isPlaying">
                 <br />
