--- a/client/app/15tunefish/style.css
+++ b/client/app/15tunefish/style.css
@@ -6,6 +6,10 @@ body {
     padding-bottom: 70px;
 }
 
+td {
+    cursor: pointer;
+}
+
 .navbar {
     border-top: 1px solid #EEEEEE;
     padding-top: 10px;
