--- a/client/views/vote/admin/user_list.html
+++ b/client/views/vote/admin/user_list.html
@@ -7,6 +7,7 @@
     <thead>
     <tr>
         <th><a id="sortLogin" href="{{ build_sort_url('login', reverse) }}">Benutzer</a></th>
+        <th>E-Mail</th>
         <th><a id="sortAccess" href="{{ build_sort_url('access_name', reverse) }}">Zugriff</a></th>
         <th class="hidden-print">Status</th>
         {% if g.user.is_admin %}
@@ -22,6 +23,7 @@
     {% for user in users|sort(attribute=userSort, reverse=reverse) %}
         <tr>
             <td>{{ user.login }}</td>
+            <td>{% if user.email %}{{ user.email }}{% else %}-{% endif %}</td>
             <td>{% if user.is_inactive %}<span class="label label-danger"><i class="i-close"></i> {{ user.access_name }} </span>{% else %}{{ user.access_name }}{% endif %}</td>
             <td class="hidden-print"><a class="access" href="{{ url_for('vote.admin.users.access', user_id=user.id) }}">{% if user.is_inactive %}
                 aktivieren{% else %}deaktivieren{% endif %}</td>
