Show a random band

--- a/client/views/vote/angular.html
+++ b/client/views/vote/angular.html
@@ -41,6 +41,7 @@
                 </li>
                 <li><a href="#/" ng-click="setRating(0,0)">Noch nicht gevotet</a></li>
                 <li><a href="#/" ng-click="setRating(5,5)">Deine Lieblingsbands</a></li>
+                <li><a ng-click="showRandomUnvoted()">Zufällige, neue Band</a></li>
                 <li><a href="#/playlist">Playlist</a></li>
                 {# <li><a href="#/stats">Statistiken</a></li> #}
                 <li><a href="/vote/ember#/bands">Altes Voting-Interface</a></li>
