--- a/client/views/vote/angular.html
+++ b/client/views/vote/angular.html
@@ -7,6 +7,7 @@
     <title>tunefish - Sommerfest Vorstraße feat. Spittaler Straße</title>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/app/15tunefish/style.css">
+    <link rel="stylesheet" href="/app/15tunefish/hotkeys.min.css">
 </head>
 <body>
 <div class="container" id="main" ng-controller="MainCtrl">
@@ -17,7 +18,7 @@
             {% raw %}
             <div ng-show="playlist.length">
                 <br />
-                <img src="{{ currentPlaying.band.image['thumb'] }}" style="width: 100%" />
+                <img ng-src="{{ currentPlaying.band.image['thumb'] }}" style="width: 100%" />
                  <strong>{{ currentPlaying.title }}</strong><br />
                 von <a href="#/band/{{currentPlaying.band.id}}"> {{ currentPlaying.artist }}</a>
                 <br />
@@ -65,7 +66,7 @@
             <button play-music ng-hide="isPlaying" class="btn btn-default"><i class="glyphicon glyphicon-play"></i></button>
             <button pause-music ng-show="isPlaying" class="btn btn-default"><i class="glyphicon glyphicon-pause"></i></button>
             <button stop-music class="btn btn-default"><i class="glyphicon glyphicon-stop"></i></button>
-            <button random class="btn btn-default" ng-class="{'btn-success': repeat}"><i class="glyphicon glyphicon-random"></i></button>
+            <!--<button random class="btn btn-default" ng-class="{'btn-success': repeat}"><i class="glyphicon glyphicon-random"></i></button>-->
             <button next-track class="btn btn-default"><i class="glyphicon glyphicon-fast-forward"></i></button>
         </div>
     </div>
@@ -91,6 +92,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-animate.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-route.js"></script>
 <script src="/app/15tunefish/angular-soundmanager2.min.js"></script>
+<script src="/app/15tunefish/hotkeys.min.js"></script>
 <script src="/app/15tunefish/app.js"></script>
 </body>
 </html>
