--- a/client/views/vote/angular.html
+++ b/client/views/vote/angular.html
@@ -33,7 +33,7 @@
                     {% if g.user.is_mod or g.user.is_admin %}
                         <li><span><a target="admin" href="{{ url_for('vote.admin.index') }}">Administration</a></li>
                     {% endif %}
-                    {# <li><span>&nbsp; <a href="{{ url_for('vote.home.vote_results') }}">Ergebnisse</a></span></li> #}
+                    <li><span><a href="{{ url_for('vote.home.vote_results') }}">Ergebnisse</a></span></li>
                 {% endif %}
 
                 <li>
